# ProtForge

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: clean.md  esmfold.md  mpnn.md  mpnn_zh.md
examples/clean/data/: enzymes.fasta  enzymes_labels.txt
examples/esmfold/data/: long.fasta  multi.fasta  single.fasta
examples/mpnn/configs/: 01_basic_monomer.yaml  02_design_specific_chains.yaml  03_fix_residues.yaml  04_redesign_specific_residues.yaml  05_homooligomer.yaml  06_bias_amino_acids.yaml  07_omit_amino_acids.yaml  08_with_dna_ligand.yaml  09_diverse_sequences.yaml  10_with_sidechain_packing.yaml  11_per_residue_bias.yaml  12_soluble_model.yaml
protforge/: __init__.py
protforge/clean/: __init__.py  cli.py  evaluate.py  infer.py  model.py  utils.py
protforge/esmfold/: __init__.py  cli.py  model.py
protforge/mpnn/: __init__.py  batch.py  cli.py  run.py  score.py
protforge/mpnn/models/: __init__.py  mpnn.py  packer.py
protforge/mpnn/utils/: __init__.py  cli.py  config.py  constants.py  display.py  formatting.py  io.py  loader.py  pdb.py  residue.py  rigid.py  sidechain.py
scripts/: download_clean_weights.sh  download_esmfold_weights.sh  download_mpnn_weights.sh
