[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protforge"
version = "1.0.0"
description = "Protein design toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
mpnn = "protforge.mpnn.cli:main"
esmfold = "protforge.esmfold.cli:run"

[tool.setuptools.packages.find]
where = ["."]
